--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "nuxt-circleci",
+  "name": "shippio-site",
   "version": "1.0.0",
-  "description": "Testing circleci nuxt generate",
-  "author": "Ugo Bataillard",
+  "description": "Nuxt.js project",
+  "author": "shinyatto <technac@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "npm run copy_env_development && HOST=0.0.0.0 PORT=3333 nuxt",
+    "build": "npm run copy_env_development && nuxt build",
+    "start": "PORT=3334 nuxt start",
     "generate": "nuxt generate",
+    "generate:development": "npm run copy_env_development && NODE_ENV=development nuxt generate && cp static/d_robots.txt dist/robots.txt",
+    "generate:staging": "npm run copy_env_staging && NODE_ENV=staging nuxt generate && cp static/d_robots.txt dist/robots.txt",
+    "generate:production": "npm run copy_env_production && NODE_ENV=production nuxt generate",
+    "generating_start:development": "npm run generate:development && PORT=3334 nuxt start",
+    "deploy:demo": "npm run generate:staging && firebase deploy -P demo",
+    "deploy:production": "npm run generate:production && firebase deploy -P production",
+    "clear:demo": "rm -rf dist/* && touch dist/index.html && firebase deploy -P demo",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "lint-staged",
+    "copy_env_development": "cp environment/.env.development .env",
+    "copy_env_staging": "cp environment/.env.staging .env",
+    "copy_env_production": "cp environment/.env.production .env",
+    "remove_files_for_ghost_dist": "cd dist && rm d_robots.txt README.md .nojekyll sitemap.xml sitemap.xml.gz",
+    "clean_theme": "cd shippio-blog-theme && rm -rf _nuxt",
+    "generate:blog_theme": "npm run generate:production && npm run clean_theme && npm run remove_files_for_ghost_dist && cp -r dist/ shippio-blog-theme && cd shippio-blog-theme && npm run zip"
   },
   "dependencies": {
     "cross-env": "^5.2.0",
