--- a/package.json
+++ b/package.json
@@ -40,6 +40,19 @@
   "dependencies": {
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
+    "@nuxtjs/apollo": "^4.0.0-rc2",
+    "@nuxtjs/babel-preset-app": "^0.8.0",
+    "@nuxtjs/dotenv": "^1.1.1",
+    "@nuxtjs/font-awesome": "^1.0.3",
+    "@nuxtjs/google-tag-manager": "^2.1.0",
+    "@nuxtjs/sitemap": "^0.1.1",
+    "@nuxtjs/style-resources": "^0.1.2",
+    "apollo-link-http": "^1.5.4",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-vue-app": "^2.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "bootstrap": "^4.1.3",
     "@nuxtjs/pwa": "^2.6.0"
