--- a/package.json
+++ b/package.json
@@ -55,7 +55,28 @@
     "babel-preset-vue-app": "^2.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/pwa": "^2.6.0"
+    "@nuxtjs/pwa": "^2.6.0",
+    "cookie-universal-nuxt": "^2.0.11",
+    "core-js": "^2.6.5",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
+    "nuxt-i18n": "^4.0.0",
+    "nuxt-robots-module": "^1.2.0",
+    "prettier": "^1.13.5",
+    "qonfucius-nuxt-fontawesome": "0.0.2",
+    "shippio-style-vue": "git+ssh://git@github.com/shippio/shippio-style-vue#0.0.5",
+    "textarea-autosize": "^0.4.2",
+    "ts-loader": "^5.3.3",
+    "vee-validate": "^2.1.1",
+    "vue-analytics": "^5.12.2",
+    "vue-moment": "^4.0.0-0",
+    "vue-select": "^2.4.0",
+    "vue-style-loader": "^4.1.0",
+    "vue-textarea-autosize": "^1.0.4",
+    "vue-timers": "^1.10.0",
+    "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
