--- a/package.json
+++ b/package.json
@@ -90,6 +90,12 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-loader": "^2.1.2",
-    "eslint-plugin-vue": "^5.2.2"
+    "eslint-plugin-vue": "^5.2.2",
+    "http-server": "^0.11.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "node-sass": "^4.9.3",
+    "prettier": "^1.14.3",
+    "sass-loader": "^7.0.3"
   }
 }
